--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>cn.wuwenyao.archetype</groupId>
   <artifactId>spring-mvc-base</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>Archetype - spring-mvc-base</name>
   <url>http://maven.apache.org</url>
 </project>
